Closed Bug 418662 Opened 16 years ago Closed 16 years ago

xpcom build bustage on windows mobile

Categories

(Core :: XPCOM, defect)

All
Windows Mobile 6 Standard
defect
Not set
blocker

Tracking

()

RESOLVED FIXED

People

(Reporter: dougt, Assigned: dougt)

Details

Attachments

(1 file)

changes:

update xpcall to new API
localfile does not have a short path on windows mobile
fixing the cycle collector build error
Attached patch patch v.1Splinter Review
Attachment #304894 - Flags: review?(benjamin)
Attachment #304894 - Flags: review?(benjamin) → review+
Attachment #304894 - Flags: approval1.9?
Comment on attachment 304894 [details] [diff] [review]
patch v.1

a1.9+=damons
Attachment #304894 - Flags: approval1.9? → approval1.9+
Checking in base/nsCycleCollector.cpp;
/cvsroot/mozilla/xpcom/base/nsCycleCollector.cpp,v  <--  nsCycleCollector.cpp
new revision: 1.98; previous revision: 1.97
done
Checking in base/nsTraceRefcntImpl.cpp;
/cvsroot/mozilla/xpcom/base/nsTraceRefcntImpl.cpp,v  <--  nsTraceRefcntImpl.cpp
new revision: 1.111; previous revision: 1.110
done
Checking in glue/nsCRTGlue.cpp;
/cvsroot/mozilla/xpcom/glue/nsCRTGlue.cpp,v  <--  nsCRTGlue.cpp
new revision: 3.8; previous revision: 3.7
done
Checking in glue/standalone/Makefile.in;
/cvsroot/mozilla/xpcom/glue/standalone/Makefile.in,v  <--  Makefile.in
new revision: 1.40; previous revision: 1.39
done
Checking in io/SpecialSystemDirectory.cpp;
/cvsroot/mozilla/xpcom/io/SpecialSystemDirectory.cpp,v  <--  SpecialSystemDirectory.cpp
new revision: 1.33; previous revision: 1.32
done
Checking in io/nsLocalFileWin.cpp;
/cvsroot/mozilla/xpcom/io/nsLocalFileWin.cpp,v  <--  nsLocalFileWin.cpp
new revision: 1.180; previous revision: 1.179
done
Checking in reflect/xptcall/src/md/Makefile.in;
/cvsroot/mozilla/xpcom/reflect/xptcall/src/md/Makefile.in,v  <--  Makefile.in
new revision: 1.8; previous revision: 1.7
done
Checking in reflect/xptcall/src/md/win32/xptcinvokece.cpp;
/cvsroot/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvokece.cpp,v  <--  xptcinvokece.cpp
new revision: 1.3; previous revision: 1.2
done
Checking in reflect/xptcall/src/md/win32/xptcstubsce.cpp;
/cvsroot/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcstubsce.cpp,v  <--  xptcstubsce.cpp
new revision: 1.6; previous revision: 1.5
done
Checking in typelib/xpidl/Makefile.in;
/cvsroot/mozilla/xpcom/typelib/xpidl/Makefile.in,v  <--  Makefile.in
new revision: 1.44; previous revision: 1.43
done
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: