Fixes for Windows CE. b=418662, r=bsmedberg, a=damons